--- a/package.json
+++ b/package.json
@@ -12,11 +12,18 @@
     "ajv": "^8.10.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.1",
+    "chai-json-schema-ajv": "^5.2.4",
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.4",
     "passport": "^0.5.2",
     "passport-http": "^0.3.0",
     "passport-jwt": "^4.0.0",
     "uuid": "^8.3.2"
+  },
+  "devDependencies": {
+    "chai": "^4.3.6",
+    "chai-http": "^4.3.0",
+    "mocha": "^9.2.0"
   }
 }
