--- a/package.json
+++ b/package.json
@@ -27,5 +27,9 @@
     "chai": "^4.3.6",
     "chai-http": "^4.3.0",
     "mocha": "^9.2.0"
+  },
+  "engine": {
+    "node" : "16.13.2",
+    "npm" : "8.1.2"
   }
 }
